started working on the analysis of the data

--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -17,11 +17,11 @@
    "id": "98140383-188c-457c-8e04-7e4620b410a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:14.126675Z",
-     "iopub.status.busy": "2024-06-21T12:25:14.126515Z",
-     "iopub.status.idle": "2024-06-21T12:25:14.141709Z",
-     "shell.execute_reply": "2024-06-21T12:25:14.141059Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:14.126662Z"
+     "iopub.execute_input": "2024-06-21T13:51:16.181452Z",
+     "iopub.status.busy": "2024-06-21T13:51:16.181302Z",
+     "iopub.status.idle": "2024-06-21T13:51:16.200840Z",
+     "shell.execute_reply": "2024-06-21T13:51:16.200285Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:16.181440Z"
     },
     "tags": []
    },
@@ -38,11 +38,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:14.142583Z",
-     "iopub.status.busy": "2024-06-21T12:25:14.142424Z",
-     "iopub.status.idle": "2024-06-21T12:25:15.745537Z",
-     "shell.execute_reply": "2024-06-21T12:25:15.745034Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:14.142571Z"
+     "iopub.execute_input": "2024-06-21T13:51:16.202231Z",
+     "iopub.status.busy": "2024-06-21T13:51:16.201552Z",
+     "iopub.status.idle": "2024-06-21T13:51:17.891430Z",
+     "shell.execute_reply": "2024-06-21T13:51:17.890650Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:16.202212Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -74,11 +74,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:15.747182Z",
-     "iopub.status.busy": "2024-06-21T12:25:15.746907Z",
-     "iopub.status.idle": "2024-06-21T12:25:15.769381Z",
-     "shell.execute_reply": "2024-06-21T12:25:15.768649Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:15.747168Z"
+     "iopub.execute_input": "2024-06-21T13:51:17.892976Z",
+     "iopub.status.busy": "2024-06-21T13:51:17.892639Z",
+     "iopub.status.idle": "2024-06-21T13:51:17.915331Z",
+     "shell.execute_reply": "2024-06-21T13:51:17.914638Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:17.892962Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -112,11 +112,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:15.770455Z",
-     "iopub.status.busy": "2024-06-21T12:25:15.770252Z",
-     "iopub.status.idle": "2024-06-21T12:25:15.852910Z",
-     "shell.execute_reply": "2024-06-21T12:25:15.852252Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:15.770442Z"
+     "iopub.execute_input": "2024-06-21T13:51:17.916897Z",
+     "iopub.status.busy": "2024-06-21T13:51:17.916138Z",
+     "iopub.status.idle": "2024-06-21T13:51:18.011666Z",
+     "shell.execute_reply": "2024-06-21T13:51:18.010953Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:17.916882Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -151,11 +151,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:15.853684Z",
-     "iopub.status.busy": "2024-06-21T12:25:15.853504Z",
-     "iopub.status.idle": "2024-06-21T12:25:15.868499Z",
-     "shell.execute_reply": "2024-06-21T12:25:15.867805Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:15.853673Z"
+     "iopub.execute_input": "2024-06-21T13:51:18.012473Z",
+     "iopub.status.busy": "2024-06-21T13:51:18.012281Z",
+     "iopub.status.idle": "2024-06-21T13:51:18.029052Z",
+     "shell.execute_reply": "2024-06-21T13:51:18.028036Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:18.012461Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -174,11 +174,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:15.869354Z",
-     "iopub.status.busy": "2024-06-21T12:25:15.869143Z",
-     "iopub.status.idle": "2024-06-21T12:25:16.836787Z",
-     "shell.execute_reply": "2024-06-21T12:25:16.836114Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:15.869342Z"
+     "iopub.execute_input": "2024-06-21T13:51:18.030078Z",
+     "iopub.status.busy": "2024-06-21T13:51:18.029863Z",
+     "iopub.status.idle": "2024-06-21T13:51:18.953900Z",
+     "shell.execute_reply": "2024-06-21T13:51:18.953176Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:18.030065Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -198,11 +198,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T12:25:16.837685Z",
-     "iopub.status.busy": "2024-06-21T12:25:16.837497Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.379837Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.379165Z",
-     "shell.execute_reply.started": "2024-06-21T12:25:16.837673Z"
+     "iopub.execute_input": "2024-06-21T13:51:18.955052Z",
+     "iopub.status.busy": "2024-06-21T13:51:18.954593Z",
+     "iopub.status.idle": "2024-06-21T15:09:16.390587Z",
+     "shell.execute_reply": "2024-06-21T15:09:16.389360Z",
+     "shell.execute_reply.started": "2024-06-21T13:51:18.955036Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -214,14 +214,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-21 12:25:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_sharp_rhodes.parquet\n",
-      "2024-06-21 12:25:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - found 306 (103) existing classifications, those transcriptions will be ignored\n",
-      "classifying 200 transcriptions |████████████████████████████████████████| 100.0% done.                                                                    ...\n",
-      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - more (403) classifications than requested, classifier was executed before on different dataset \n",
-      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - \u001b[22m\u001b[49m\u001b[32m*** all 200 requested transcriptions classifications were completed ***\u001b[0m\n",
-      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 403 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
-      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
-      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - old file will be overwritten by a new one (old has 306 records vs new 403)\n"
+      "2024-06-21 13:51:18 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_cool_napier.parquet\n",
+      "2024-06-21 13:51:18 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - found 403 (3) existing classifications, those transcriptions will be ignored\n",
+      "classifying 128 transcriptions |████████████████████████████████████████| 100.0% done.                                                                    ...\n",
+      "2024-06-21 15:09:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - more (528) classifications than requested, classifier was executed before on different dataset \n",
+      "2024-06-21 15:09:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - \u001b[22m\u001b[49m\u001b[32m*** all 128 requested transcriptions classifications were completed ***\u001b[0m\n",
+      "2024-06-21 15:09:16 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 528 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
+      "2024-06-21 15:09:16 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
+      "2024-06-21 15:09:16 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - old file will be overwritten by a new one (old has 403 records vs new 528)\n"
      ]
     }
    ],
@@ -237,12 +237,13 @@
    "id": "c79de720-ae51-416d-ba1a-5ec26b3eb26a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T13:32:35.381304Z",
-     "iopub.status.busy": "2024-06-21T13:32:35.380608Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.423729Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.422838Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.381288Z"
-    }
+     "iopub.execute_input": "2024-06-21T15:09:16.393229Z",
+     "iopub.status.busy": "2024-06-21T15:09:16.392700Z",
+     "iopub.status.idle": "2024-06-21T15:09:16.462800Z",
+     "shell.execute_reply": "2024-06-21T15:09:16.461214Z",
+     "shell.execute_reply.started": "2024-06-21T15:09:16.393202Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -255,166 +256,6 @@
    "source": [
     "exit_cell()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db01364e-e17a-4012-ba1b-690dcd9b3d26",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.424127Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.424312Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.424242Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.424235Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "text_md = transcription_classifier.messages.to_dict()['data'][0]['content'][0]['text']['value']\n",
-    "text_json = transcription_classifier.unmarkdown_parser.render(text_md)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c806873b-ce6f-42b7-abd8-2e3cfd712375",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.425209Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.425405Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.425330Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.425323Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "response = transcription_classifier.df_transcription_classification.iloc[-1]['classification_json']\n",
-    "response_json = json.loads(response)\n",
-    "display(response_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15ab84c4-7854-42b3-9b4e-48f0e1012dc4",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.426080Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.426309Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.426230Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.426222Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "transcription_classifier.save_classification_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "303db268-009c-4a57-bf0a-1b856502c136",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.427474Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.427663Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.427589Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.427582Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_backup = pd.read_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c047d1a-7f42-4dc0-abb2-d3fe85b77dd7",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.428719Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.428911Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.428839Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.428833Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "transcription_classifier.df_transcriptions_classifications = df_backup.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98de1c1a-d7f2-4420-83de-3248d9aaf449",
-   "metadata": {
-    "editable": true,
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.430274Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.430472Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.430396Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.430388Z"
-    },
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_transcriptions_classifications = df_backup.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a111228-32d1-4788-a470-546361c618a5",
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2024-06-21T13:32:35.431271Z",
-     "iopub.status.idle": "2024-06-21T13:32:35.431452Z",
-     "shell.execute_reply": "2024-06-21T13:32:35.431381Z",
-     "shell.execute_reply.started": "2024-06-21T13:32:35.431374Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "len(df_backup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ee7e810-f0e4-4151-82a1-354f8f5c1f6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
