--- a/notebooks/visits/Raport - Wnioskowanie Statystyczne Henryk.ipynb
+++ b/notebooks/visits/Raport - Wnioskowanie Statystyczne Henryk.ipynb
@@ -15,7 +15,7 @@
     "- braku stałego, wspólnego istniejącego w sposób ciągły czynnika infekcji\n",
     "- braku wpływu poprzedich chorób na pojawienie się nowych.\n",
     "\n",
-    "Autor zakłada że wszystkie te założenia zostały spełnione w przypadku Henryka Kabzy. Wskazuje na to wprost dokumentacja medyczna dziecka.\n",
+    "Autor zakłada że wszystkie te założenia zostały spełnione w przypadku małoletniego Henryka. Wskazuje na to wprost dokumentacja medyczna dziecka.\n",
     "\n",
     "### Rozkład Dwumianowy\n",
     "W celu wykazania niezgodnego z doświadczeniem życiowym prawdopodobieństwa tego, że ciąg zdarzeń w postaci 11 koincydencji choroby dziecka z wizytami jego taty na 13 takich wizyt jest dziełem przypadku, stosuje się rozkłąd dwumianowy wyrażony wzorem:\n",
@@ -32,7 +32,7 @@
     "- $n = 13$ liczba spotkań, które miały się odbyć\n",
     "- $p_{4\\ dni} = 13.1\\%$ przy średnio 4 dniach choroby na miesiąc, $p_{5\\ dni} = 16.4\\%$ przy 5 dniach i $p_{7\\ dni} = 23\\%$ przy 7 dniach\n",
     "  \n",
-    "Prawdopodobieństwo pojedynczego zdarzenia liczono z następującego wzoru:\n",
+    "Prawdopodobieństwo pojedynczego zdarzenia, jakim jest koincydencja choroby Henryka z wizytą jego taty liczono jako prawdopodobieństwa wystąpienia choroby Henryka w określony dzień miesiąca. Wypowadzono to z następującego wzoru:\n",
     "\n",
     "$p = \\frac{srednia\\ liczba\\ dni\\ choroby\\ w\\ miesiącu}{srednia\\ liczba\\ dni\\ w\\ miesiącu}$\n",
     "\n",
@@ -41,7 +41,7 @@
     "- $srednia\\ liczba\\ dni\\ w\\ miesiącu = 30.437$\n",
     "\n",
     "### Prawdopodobieństwo wystąpienia 11 lub więcej sukcesów na 13 prób\n",
-    "Obliczenie to wykonywane jest z pomocą $funkcji masy prawdopodobieństwa$ określonej wzorem:\n",
+    "Obliczenie to wykonywane jest z pomocą $funkcji\\ masy\\ prawdopodobieństwa$ określonej wzorem:\n",
     "\n",
     "$P(X \\geq K) = \\sum_{k=K}^{n} \\binom{n}{k} p^k (1 - p)^{n - k}$\n",
     "\n",
