--- a/notebooks/visits/Raport - Wnioskowanie Statystyczne Henryk.ipynb
+++ b/notebooks/visits/Raport - Wnioskowanie Statystyczne Henryk.ipynb
@@ -48,7 +48,7 @@
     "Funkcja ta odpowiada na pytanie _jakie jest prawdopodobieńśtwo, że w ciągu $n$ prób sukces wystąpi $K$ lub więcj razy_.   \n",
     "Przyjmując $K = 11$ oraz $n = 13$ oraz $p$ odpowiednio $p_{4\\ dni} = 13.1\\%$, $p_{5\\ dni} = 16.4\\%$ oraz $p_{7\\ dni} = 23\\%$ otrzymujemy:\n",
     "\n",
-    "- $P(X \\geq 11)_{4\\ dni} \\approx 0.000\\ 0013\\ 2\\%$ lub około ${1 : 82\\ 078\\ 460}$\n",
+    "- $P(X \\geq 11)_{4\\ dni} \\approx 0.000\\ 0013\\%$ lub około ${1 : 82\\ 078\\ 460}$\n",
     "- $P(X \\geq 11)_{5\\ dni} \\approx 0.000\\ 014\\%$ lub około ${1 : 7\\ 560\\ 100}$\n",
     "- $P(X \\geq 11)_{7\\ dni} \\approx 0.000\\ 463\\%$ lub około ${1 : 215\\ 000}$\n",
     "\n",
