--- a/notebooks/visits/Obliczenia -Wnioskowanie Statystyczne Henryk.ipynb
+++ b/notebooks/visits/Obliczenia -Wnioskowanie Statystyczne Henryk.ipynb
@@ -26,7 +26,7 @@
     "- braku stałego, wspólnego istniejącego w sposób ciągły czynnika infekcji\n",
     "- braku wpływu poprzedich chorób na pojawienie się nowych.\n",
     "\n",
-    "Autor zakłada że wszystkie te założenia zostały spełnione w przypadku Henryka Kabzy. Wskazuje na to wprost dokumentacja medyczna dziecka.\n",
+    "Autor zakłada że wszystkie te założenia zostały spełnione w przypadku Henryka. Wskazuje na to wprost dokumentacja medyczna dziecka.\n",
     "\n",
     "### Rozkład Dwumianowy\n",
     "Stosuje się rozkłąd dwumianowy wyrażony wzorem:\n",
